--- a/movie_recommendation/movie_recommendation_system.ipynb
+++ b/movie_recommendation/movie_recommendation_system.ipynb
@@ -14,18 +14,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "90cbe007",
    "metadata": {},
    "outputs": [],
    "source": [
-    "movies= pd.read_csv('tmdb_5000_movies.csv')\n",
-    "credits=pd.read_csv('tmdb_5000_credits.csv')"
+    "movies= pd.read_csv('dataset/tmdb_5000_movies.csv')\n",
+    "credits=pd.read_csv('dataset/tmdb_5000_credits.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "b8eb0fa4",
    "metadata": {},
    "outputs": [
@@ -165,7 +165,7 @@
        "1  Pirates of the Caribbean: At World's End           6.9        4500  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "2f2a79eb",
    "metadata": {},
    "outputs": [
@@ -240,7 +240,7 @@
        "1  [{\"credit_id\": \"52fe4232c3a36847f800b579\", \"de...  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "1ba0d357",
    "metadata": {},
    "outputs": [],
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "34cdf4d6",
    "metadata": {},
    "outputs": [
@@ -271,7 +271,7 @@
        "(4809, 23)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "6d404b5c",
    "metadata": {},
    "outputs": [
@@ -391,7 +391,7 @@
        "[1 rows x 23 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -402,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "193cc8a1",
    "metadata": {},
    "outputs": [
@@ -411,7 +411,7 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "Int64Index: 4809 entries, 0 to 4808\n",
+      "RangeIndex: 4809 entries, 0 to 4808\n",
       "Data columns (total 23 columns):\n",
       " #   Column                Non-Null Count  Dtype  \n",
       "---  ------                --------------  -----  \n",
@@ -439,7 +439,7 @@
       " 21  cast                  4809 non-null   object \n",
       " 22  crew                  4809 non-null   object \n",
       "dtypes: float64(3), int64(5), object(15)\n",
-      "memory usage: 901.7+ KB\n"
+      "memory usage: 864.2+ KB\n"
      ]
     }
    ],
@@ -449,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "id": "ace82742",
    "metadata": {},
    "outputs": [],
@@ -468,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "id": "bac59996",
    "metadata": {},
    "outputs": [
@@ -534,7 +534,7 @@
        "0  [{\"credit_id\": \"52fe48009251416c750aca23\", \"de...  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -545,7 +545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "id": "163ea10b",
    "metadata": {},
    "outputs": [
@@ -554,7 +554,7 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "Int64Index: 4809 entries, 0 to 4808\n",
+      "RangeIndex: 4809 entries, 0 to 4808\n",
       "Data columns (total 7 columns):\n",
       " #   Column    Non-Null Count  Dtype \n",
       "---  ------    --------------  ----- \n",
@@ -566,7 +566,7 @@
       " 5   cast      4809 non-null   object\n",
       " 6   crew      4809 non-null   object\n",
       "dtypes: int64(1), object(6)\n",
-      "memory usage: 300.6+ KB\n"
+      "memory usage: 263.1+ KB\n"
      ]
     }
    ],
@@ -576,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "id": "ff57c7e6",
    "metadata": {},
    "outputs": [
@@ -593,7 +593,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -604,7 +604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "id": "ec02b052",
    "metadata": {},
    "outputs": [
@@ -614,7 +614,7 @@
        "0"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -625,7 +625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "id": "cc88285b",
    "metadata": {},
    "outputs": [
@@ -635,7 +635,7 @@
        "'[{\"id\": 28, \"name\": \"Action\"}, {\"id\": 12, \"name\": \"Adventure\"}, {\"id\": 14, \"name\": \"Fantasy\"}, {\"id\": 878, \"name\": \"Science Fiction\"}]'"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -654,7 +654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "id": "dc6aa5d8",
    "metadata": {},
    "outputs": [],
@@ -669,7 +669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "id": "30cf56bd",
    "metadata": {},
    "outputs": [],
@@ -679,7 +679,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "id": "35078c3f",
    "metadata": {},
    "outputs": [],
@@ -698,7 +698,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "id": "403dc568",
    "metadata": {},
    "outputs": [],
@@ -708,7 +708,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "id": "63c048db",
    "metadata": {},
    "outputs": [],
@@ -718,7 +718,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "id": "c40aa6e4",
    "metadata": {},
    "outputs": [],
@@ -734,7 +734,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
    "id": "2b6a8a43",
    "metadata": {},
    "outputs": [],
@@ -744,7 +744,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 24,
    "id": "90ba2a14",
    "metadata": {},
    "outputs": [
@@ -754,7 +754,7 @@
        "'In the 22nd century, a paraplegic Marine is dispatched to the moon Pandora on a unique mission, but becomes torn between following orders and protecting an alien civilization.'"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -765,7 +765,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 25,
    "id": "9b3d1986",
    "metadata": {},
    "outputs": [],
@@ -782,7 +782,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 26,
    "id": "f3ad6309",
    "metadata": {},
    "outputs": [
@@ -908,7 +908,7 @@
        "4    [Taylor Kitsch, Lynn Collins, Samantha Morton]     [Andrew Stanton]  "
       ]
      },
-     "execution_count": 24,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -919,7 +919,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 27,
    "id": "d3496ec3",
    "metadata": {},
    "outputs": [],
@@ -932,7 +932,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 28,
    "id": "db8c997f",
    "metadata": {},
    "outputs": [
@@ -1058,7 +1058,7 @@
        "4    [TaylorKitsch, LynnCollins, SamanthaMorton]     [AndrewStanton]  "
       ]
      },
-     "execution_count": 26,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1069,7 +1069,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 29,
    "id": "81366a41",
    "metadata": {},
    "outputs": [],
@@ -1079,7 +1079,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 30,
    "id": "70c27bf0",
    "metadata": {},
    "outputs": [],
@@ -1089,7 +1089,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 31,
    "id": "ea275c1d",
    "metadata": {},
    "outputs": [],
@@ -1099,7 +1099,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 32,
    "id": "fe4a5661",
    "metadata": {},
    "outputs": [
@@ -1180,7 +1180,7 @@
        "4  John Carter is a war-weary, former military ca...  "
       ]
      },
-     "execution_count": 30,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1191,7 +1191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 33,
    "id": "7999816f",
    "metadata": {},
    "outputs": [],
@@ -1201,7 +1201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 34,
    "id": "e09a2453",
    "metadata": {},
    "outputs": [],
@@ -1222,7 +1222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 35,
    "id": "c49733d9",
    "metadata": {},
    "outputs": [
@@ -1232,7 +1232,7 @@
        "'in the 22nd century, a parapleg marin is dispatch to the moon pandora on a uniqu mission, but becom torn between follow order and protect an alien civilization. action adventur fantasi sciencefict cultureclash futur spacewar spacecoloni societi spacetravel futurist romanc space alien tribe alienplanet cgi marin soldier battl loveaffair antiwar powerrel mindandsoul 3d samworthington zoesaldana sigourneyweav jamescameron'"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1243,7 +1243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 36,
    "id": "25f31adc",
    "metadata": {},
    "outputs": [],
@@ -1253,7 +1253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 37,
    "id": "16aa53e3",
    "metadata": {},
    "outputs": [
@@ -1334,7 +1334,7 @@
        "4  john carter is a war-weary, former militari ca...  "
       ]
      },
-     "execution_count": 35,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1345,7 +1345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 38,
    "id": "16075483",
    "metadata": {},
    "outputs": [],
@@ -1356,7 +1356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 39,
    "id": "05a408e1",
    "metadata": {},
    "outputs": [],
@@ -1366,7 +1366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 40,
    "id": "181151ef",
    "metadata": {},
    "outputs": [
@@ -1382,7 +1382,7 @@
        "       [0, 0, 0, ..., 0, 0, 0]], dtype=int64)"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1393,7 +1393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 41,
    "id": "9edc2453",
    "metadata": {},
    "outputs": [],
@@ -1403,7 +1403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 42,
    "id": "cf38139d",
    "metadata": {},
    "outputs": [],
@@ -1413,7 +1413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 43,
    "id": "1ca86679",
    "metadata": {},
    "outputs": [],
@@ -1424,7 +1424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 44,
    "id": "eaf04251",
    "metadata": {},
    "outputs": [
@@ -1435,7 +1435,7 @@
        "       0.02615329])"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1446,7 +1446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 45,
    "id": "1757d2a9",
    "metadata": {},
    "outputs": [],
@@ -1478,7 +1478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 46,
    "id": "081e7691",
    "metadata": {},
    "outputs": [
@@ -1500,7 +1500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 47,
    "id": "fab264fe",
    "metadata": {},
    "outputs": [
@@ -1522,8 +1522,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "id": "10a69647",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Pickle files saved successfully!\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pickle\n",
+    "\n",
+    "pickle.dump(new_df, open('movies.pkl', 'wb'))\n",
+    "pickle.dump(cv, open('vectorizer.pkl', 'wb'))\n",
+    "pickle.dump(similarity, open('similarity.pkl', 'wb'))\n",
+    "\n",
+    "print(\"Pickle files saved successfully!\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "52063a95-da34-4029-9d51-1d47d46de002",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1545,7 +1569,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
